hard-gists/5189575/run.log
=== Docker Run Log for 5189575 ===
Started at: Mi 29. Okt 15:25:32 CET 2025

[2025-10-29 15:25:32] START: Running container for 5189575
[2025-10-29 15:25:32] SUCCESS: Container 635dabb4b04034a3d4b3a181c661165de4028a3188da2631f5176d990173d39d started for 5189575
=== Container logs for 5189575 ===
  File "/snippet.py", line 35
    print "%s clients with board-id configs." % str(boards_populated)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5189575 ===
[2025-10-29 15:25:34] INFO: Container 635dabb4b04034a3d4b3a181c661165de4028a3188da2631f5176d990173d39d has stopped
